# vapoursynth-it

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  build.zig  build.zig.zon  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: upstream_reference.md
reference/: README.md
reference/avisynth/: IT.txt  IT_YV12.sln  IT_YV12.txt  IT_YV12.vcxproj  IT_YV12.vcxproj.filters  IT_YV12_mod.txt
reference/avisynth/src/: avisynth.h  di.cpp  info.h  synth.h
reference/vapoursynth-cpp-api4/: GNUmakefile  README.md  configure
reference/vapoursynth-cpp-api4/src/: IScriptEnvironment.h  vs_it.cpp  vs_it.h  vs_it_c.cpp  vs_it_interface.cpp  vs_it_interface.h  vs_it_process.cpp
scripts/: bench.py  build_pypi_wheels.py  build_upstream_api4.sh  compare_upstream.py  compare_vivtc.py  gen_testclip.py  regen_golden.py  test_real_video.py
src/: blend.zig  c.zig  decide.zig  edge.zig  eval_iv.zig  filter.zig  motion.zig  output.zig  plane.zig  plugin.zig  scalar.zig  scene.zig  simd.zig  state.zig
tests/integration/: conftest.py  test_filter.py  test_params.py  test_upstream_compare.py
tests/integration/fixtures/: golden_hashes.txt
