[build-system]
# We don't go through setuptools / hatchling at build time — the wheels
# are produced by `scripts/build_pypi_wheels.py`, which takes the
# pre-built artefacts from `zig build cross` and assembles a separate
# platform-tagged wheel per (OS, arch). This file is therefore a pure
# project-metadata document; running `pip install .` from a source
# checkout is *not* supported. End users either:
#   * `pip install vapoursynth-zit` (downloads the platform-matched wheel
#     from PyPI), or
#   * download the `.zip` from the GitHub release and drop the binary
#     into their VapourSynth plugin directory by hand.
#
# Anyone wanting to publish from source should run:
#   zig build cross
#   python scripts/build_pypi_wheels.py
#   twine upload dist/*.whl
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vapoursynth-zit"
version = "1.3.1"
description = "Inverse-telecine plugin for VapourSynth — Zig port of IT, with the original Avisynth parameters restored"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "theChaosCoder" },
]
keywords = ["video", "vapoursynth", "ivtc", "inverse-telecine", "deinterlace", "telecine", "pulldown"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Other",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = ["VapourSynth>=55"]

[project.urls]
Homepage      = "https://github.com/theChaosCoder/vapoursynth-it"
Repository    = "https://github.com/theChaosCoder/vapoursynth-it"
Issues        = "https://github.com/theChaosCoder/vapoursynth-it/issues"
Changelog     = "https://github.com/theChaosCoder/vapoursynth-it/blob/main/CHANGELOG.md"
Documentation = "https://github.com/theChaosCoder/vapoursynth-it#readme"

# Hatchling source-distribution layout. The sdist contains the Zig
# source so curious users can rebuild from scratch; the wheels (built
# separately by scripts/build_pypi_wheels.py) include only the
# pre-compiled binary for one platform.
[tool.hatch.build.targets.sdist]
include = [
    "src/**/*.zig",
    "vendor/**",
    "build.zig",
    "build.zig.zon",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "scripts/build_pypi_wheels.py",
    "pyproject.toml",
]
exclude = [
    ".zig-cache/**",
    "zig-out/**",
    "encode_test/**",
    "tests/**",
    "reference/**",
    ".github/**",
]

[tool.hatch.build.targets.wheel]
# Wheels are not produced by hatchling; see scripts/build_pypi_wheels.py.
# We still need this section so `hatch build` doesn't complain about
# an unknown target type, but it's intentionally empty.
bypass-selection = true
